# emodnet_qmgc

./: CMakeLists.txt  DeveloperNotes.md  Dockerfile  Readme.md  doxyfile.cfg
cmake/modules/: FindCTB.cmake
cpp/: CMakeLists.txt
cpp/apps/: CMakeLists.txt  convert_to_qmt.cpp  parse_quantized_mesh_terrain.cpp  qm_tiler.cpp
cpp/cmake/modules/: FindGeographicLib.cmake
cpp/src/: cgal_corner_vertices_are_constrained_vertex_map.h  cgal_cost_and_count_stop_predicate.h  cgal_defines.h  cgal_further_constrained_placement.h  cgal_generate_border_features_polylines.h  cgal_simplification_constrained_borders.h  cgal_utils.cpp  cgal_utils.h  cgal_western_and_southern_border_edges_are_constrained_edge_map.h  crs_conversions.h  global_geodetic.cpp  global_geodetic.h  gzip_file_reader.cpp  gzip_file_reader.h  gzip_file_writer.cpp  gzip_file_writer.h  quantized_mesh.cpp  quantized_mesh.h  quantized_mesh_iterator.h  quantized_mesh_tile.cpp  quantized_mesh_tile.h  quantized_mesh_tiler.cpp  quantized_mesh_tiler.h  quantized_mesh_tiles_pyramid_builder.cpp  quantized_mesh_tiles_pyramid_builder.h  quantized_mesh_tiles_pyramid_builder_parallel.cpp  quantized_mesh_tiles_pyramid_builder_parallel.h  surface_simplification_lindstrom_turk_strategy.cpp  surface_simplification_lindstrom_turk_strategy.h  surface_simplifier_remeshing_strategy.cpp  tile_border_vertices.h  zoom_tiles_border_vertices_cache.cpp  zoom_tiles_border_vertices_cache.h  zoom_tiles_processing_scheduler.h  zoom_tiles_scheduler.h
cpp/tests/: CMakeLists.txt  remesh_preserving_borders.cpp  simplify_maintaining_border_edges.cpp  simplify_preserving_border_edges.cpp  test_read_write.cpp
html/: Projection__traits__3__extended_8h_source.html  annotated.html  border__edges__are__constrained__edge__map_8h_source.html  borders__data_8h_source.html  cgal__utils_8h.html  cgal__utils_8h_source.html  classCGAL_1_1Constrained__triangulation__plus__2.html  classCGAL_1_1Polyline__simplification__2_1_1PointSetFeaturesSimplificationCost-members.html  classCGAL_1_1Polyline__simplification__2_1_1PointSetFeaturesSimplificationCost.html  classCGAL_1_1Projection__traits__xy__3__extended-members.html  classCGAL_1_1Projection__traits__xy__3__extended.html  classCGAL_1_1Projection__traits__xz__3__extended-members.html  classCGAL_1_1Projection__traits__xz__3__extended.html  classCGAL_1_1Projection__traits__yz__3__extended-members.html  classCGAL_1_1Projection__traits__yz__3__extended.html  classCGAL_1_1Surface__mesh__simplification_1_1FurtherConstrainedPlacement-members.html  classCGAL_1_1Surface__mesh__simplification_1_1FurtherConstrainedPlacement.html  classCGAL_1_1internal_1_1Projection__traits__3__extended-members.html  classCGAL_1_1internal_1_1Projection__traits__3__extended.html  classCGAL_1_1internal_1_1Squared__distance__projected__3__extended-members.html  classCGAL_1_1internal_1_1Squared__distance__projected__3__extended.html  classEllipsoid-members.html  classEllipsoid.html  classGZipFileReader-members.html  classGZipFileReader.html  classGZipFileWriter-members.html  classGZipFileWriter.html  classPolyhedronBuilderFromC3T3Boundary-members.html  classPolyhedronBuilderFromC3T3Boundary.html  classPolyhedronBuilderFromProjectedTriangulation-members.html  classPolyhedronBuilderFromProjectedTriangulation.html  classQuantizedMesh-members.html  classQuantizedMesh.html  classQuantizedMeshTile-members.html  classQuantizedMeshTile.html  classQuantizedMeshTiler-members.html  classQuantizedMeshTiler.html  classQuantizedMeshTilesPyramidBuilder-members.html  classQuantizedMeshTilesPyramidBuilder.html  classTileBorderVertices-members.html  (+163 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+40 more)
matlab/: check_left_right_tiles.m  loadStats.m
python/: create_layer_file.py  qm_tiler_large_files.py  zxf_to_geotiff.py
scripts/: create_layer_file.py  qm_tiler_large_files.py  simple_tiles_server.py  split_large_geotiff_to_vrt.py
scripts/tests/: emodnet_esri_ascii_to_geotiff.py
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  dem2tin.cpp  qm_parser.cpp  qm_tiler.cpp
src/base/: Projection_traits_3_extended.h  (+46 more)
src/dev-tests/: CMakeLists.txt  Readme.md  compute_statistics.cpp  detect_features_without_borders.cpp  get_tile_bounds.cpp  hierarchy_simplification.cpp  qm_parser.cpp  remesh_preserving_borders.cpp  simplify_preserving_border_edges.cpp  test_check_borders.cpp  test_read_write.cpp  wlop_simplification.cpp
src/tests/: CMakeLists.txt  hierarchy_simplification.cpp  remesh_preserving_borders.cpp  simplify_preserving_border_edges.cpp  test_check_borders.cpp  wlop_simplification.cpp
src/tin_creation/: CMakeLists.txt  tin_creation_cgal_types.h  tin_creation_delaunay_strategy.cpp  tin_creation_delaunay_strategy.h  tin_creation_greedy_insertion_strategy.cpp  tin_creation_greedy_insertion_strategy.h  tin_creation_remeshing_strategy.cpp  tin_creation_remeshing_strategy.h  tin_creation_simplification_hierarchy_point_set.cpp  tin_creation_simplification_hierarchy_point_set.h  tin_creation_simplification_lindstrom_turk_strategy.cpp  tin_creation_simplification_lindstrom_turk_strategy.h  tin_creation_simplification_point_set.cpp  tin_creation_simplification_point_set.h  tin_creation_simplification_point_set_grid.cpp  tin_creation_simplification_point_set_grid.h  tin_creation_simplification_point_set_hierarchy.cpp  tin_creation_simplification_point_set_hierarchy.h  tin_creation_simplification_point_set_random.cpp  tin_creation_simplification_point_set_random.h  tin_creation_simplification_point_set_wlop.cpp  tin_creation_simplification_point_set_wlop.h  tin_creation_utils.h  tin_creator.cpp  tin_creator.h
tutorial/: tutorial_demo.html
(+25 files in other folders)
